--- a/style.css
+++ b/style.css
@@ -31,18 +31,19 @@ ul {
 
 .mobile, .icon {
     display: none;
+    z-index: 1;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     max-width: 100%;
-    max-height: 60px;
+    height: 75px;
     border-bottom: 0.5px solid #f1f1f1 ;
 }
 .navbar a {
     display: inline-block;
-    line-height: 60px;
+    line-height: 75px;
     padding: 0 24px;
     color: #000;
     font-weight: 500;
@@ -75,57 +76,69 @@ ul {
 }
 
 
-/* =====================slidr================= */
-.slider::after {
-    content: '';
-    clear: both;
-    display: table;
-}
+/* =====================slider================= */
 
-.slider img {
-    width: 100%;
-    padding-top: 20px;
+.slider {
+   display: flex;
+   justify-content: space-between;
+   background-color: #f1f1f1;
 }
-.slider--lert{
-    width: 65%;
-    float: left;
+.slide-big{
+    width: 67%;
+    padding: 10px 0;
+}
+.slide-big img{
+    display: block;
     margin: 0 auto;
-}
-
-.slider--right {
-    padding: 10px;
-    width: 30%;
-    float: left;
-}
-
-/* ================products====================== */
-
-.product {
-    max-width: 100%;
-    background-color: #cb2c54;
+    width: 100%;
     border-radius: 10px;
-    padding: 15px 0;
+}
+.slide-small {
+    padding: 10px 0 10px 0;
+    width: 32%;
+
+}
+.slide-small span {
+    display: flex;
+    height: 50%;
+    align-items: center;
+}
+
+.slide-small img {
+    border-radius: 10px;
+    margin: auto;
+    width: 100%;
 }
 
 .subTitle {
     padding-top: 20px;
 }
+/* ================products====================== */
+
+.product {
+    position: relative;
+    overflow-x: hidden;
+    height: 600px;
+}
 
 .products {
-    width: 100%;
     padding-top: 20px;
+    position: absolute;
     display: flex;
-    justify-content: space-around;
+    justify-content: start;
+    align-items: start;
 }
 
 .cart {
-    width: 17%;
+    display: block;
+    width: 300px;
     padding: 10px;
     border-radius: 10px;
     background-color: #fff;
     cursor: pointer;
 }
 
+/* ====================== */
 .cart img:hover {
     -ms-transform: scale(1.05); /* IE 9 */
     -webkit-transform: scale(1.05); /* Safari 3-8 */
