--- a/mobile.css
+++ b/mobile.css
@@ -39,14 +39,18 @@
         display: block;
         padding: 12px 25px;
         border-bottom: 1px solid #fff;
+        font-size: 23px;
     }
     /* =========slide========== */
     .slide-small {
         display: none;
     }
     .slide-big {
-        padding: 5px;
+        padding: 0;
         width: 100%;
+    }
+    .slide-big img {
+        border-radius: 0 0 0 0;
     }
 
     /* ======================brand============ */
